[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegramclonehot"
version = "1.0.0"
description = "Ferramenta Python avançada para transferir álbuns do Telegram com sistema de filas otimizado"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Clown171", email = "clown171@example.com"}
]
maintainers = [
    {name = "Clown171", email = "clown171@example.com"}
]
keywords = [
    "telegram",
    "clone",
    "transfer",
    "albums",
    "automation",
    "bot"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "telethon==1.37.0",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "msgpack>=1.1.0",
    "setuptools>=70.0.0",
    "tomli>=2.2.0; python_version<'3.11'",
    "packaging>=25.0",
    "pygments>=2.19.0",
    "platformdirs>=4.3.0",
    "distlib>=0.4.0",
    "distro>=1.9.0",
    "pyproject-hooks>=1.2.0",
    "resolvelib>=1.2.0",
    "truststore>=0.10.0",
    "dependency-groups>=1.3.0",
    "CacheControl>=0.14.0"
]

[project.urls]
Homepage = "https://github.com/arthurxavieerr/telegramclonehot"
Repository = "https://github.com/arthurxavieerr/telegramclonehot.git"
Issues = "https://github.com/arthurxavieerr/telegramclonehot/issues"
Changelog = "https://github.com/arthurxavieerr/telegramclonehot/blob/main/CHANGELOG.md"
Documentation = "https://github.com/arthurxavieerr/telegramclonehot/blob/main/README.md"

[project.scripts]
telegramclonehot = "run:main"

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "bandit>=1.7.0"
]

[tool.setuptools]
packages = ["telegramclonehot"]
include-package-data = true

[tool.setuptools.package-data]
telegramclonehot = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | temp_mediaErosFree
  | telegram_env
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["telegramclonehot"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "temp_mediaErosFree",
    "telegram_env"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "telethon.*",
    "rich.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.bandit]
exclude_dirs = ["tests", "temp_mediaErosFree", "telegram_env"]
skips = ["B101", "B601"]